@@ -131,7 +131,7 @@ int main (int argc, char *argv[])
 #else
 	g_message ("IDL_parse_filename");
 	rv = IDL_parse_filename (fn, NULL, NULL, &tree, &ns,
-				 argc == 3 ? atoi (argv[2]) : 0, IDL_WARNING1);
+				 argc == 3 ? atoi (argv[2]) : IDLF_XPIDL, IDL_WARNING1);
 #endif
 
 	if (rv == IDL_SUCCESS) {
